fix: adjusted tab height on smaller desktop screens

--- a/components/organisms/Header/header.module.scss
+++ b/components/organisms/Header/header.module.scss
@@ -58,3 +58,12 @@
   }
 }
 
+//Desktop screens that are too short to show 3 tabs down the side
+@media screen and (min-width: 740px) and (max-width: 980px) and (max-height: 768px) {
+  .header {
+      &:after{
+        display: none;
+    }
+  }
+}
+
